=== HEAD

* Add Database#adapter_scheme, for checking which adapter a Database uses (jeremyevans)

* Allow Dataset#grep to take :all_patterns, :all_columns, and :case_insensitive options (mighub, jeremyevans)

=== 3.13.0 (2010-07-01)

* Allow Model.find_or_create to take a block which is yielded the object to be created, if no object is found (zaius, jeremyevans)

* Make PlaceholderLiteralString a GenericExpression subclass (jeremyevans)

* Allow nil/NULL to be used as a CASE expression value (jeremyevans)

* Support bitwise operators on more databases (jeremyevans)

* Make PostgreSQL do bitwise xor instead of exponentiation for ^ operator (jeremyevans)

* Fix handling of tinyint(1) columns when connecting to MySQL via JDBC (jeremyevans)

* Handle arrays of two element arrays as filter hash values automatically (jeremyevans)

* Allow :frame option for windows to take a string that is used literally (jeremyevans)

* Support transaction isolation levels on PostgreSQL, MySQL, and MSSQL (jeremyevans)

* Support prepared transactions/two-phase commit on PostgreSQL, MySQL, and H2 (jeremyevans)

* Allow NULLS FIRST/LAST when ordering using the :nulls=>:first/:last option to asc and desc (jeremyevans)

* On PostgreSQL, if no :schema option is provided for #tables, #table_exists?, or #schema, assume all schemas except the default non-public ones (jeremyevans) (#305)

* Cache prepared statements when using the native sqlite driver, improving performance (jeremyevans)

* Add a Tree plugin for treating model objects as being part of a tree (jeremyevans, mwlang)

* Add a :methods_module association option, for choosing the module into which association methods are placed (jeremyevans)

* Add a List plugin for treating model objects as being part of a list (jeremyevans, aemadrid)

* Don't attempt to use class polymorphism in the class_table_inheritance plugin if no cti_key is defined (jeremyevans)
