@@ -1,5 +1,7 @@
 === HEAD
 
+* Make Model dataset's destroy method respect the model's use_transactions setting, instead of always using a transaction (jeremyevans)
+
 * Add Database#adapter_scheme, for checking which adapter a Database uses (jeremyevans)
 
 * Allow Dataset#grep to take :all_patterns, :all_columns, and :case_insensitive options (mighub, jeremyevans)
